; ModuleID = '/home/carl/AnghaBench/freebsd/sys/dev/usb/wlan/extr_if_urtw.c_urtw_set_mode.c'
source_filename = "/home/carl/AnghaBench/freebsd/sys/dev/usb/wlan/extr_if_urtw.c_urtw_set_mode.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.urtw_softc = type { i32 }

@URTW_EPROM_CMD = common dso_local global i32 0, align 4
@URTW_EPROM_CMD_MASK = common dso_local global i32 0, align 4
@URTW_EPROM_CMD_SHIFT = common dso_local global i32 0, align 4
@URTW_EPROM_CS = common dso_local global i32 0, align 4
@URTW_EPROM_CK = common dso_local global i32 0, align 4
@llvm.used = appending global [1 x i8*] [i8* bitcast (i32 (%struct.urtw_softc*, i32)* @urtw_set_mode to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal i32 @urtw_set_mode(%struct.urtw_softc* %0, i32 %1) #0 {
  %3 = alloca %struct.urtw_softc*, align 8
  %4 = alloca i32, align 4
  %5 = alloca i32, align 4
  %6 = alloca i32, align 4
  store %struct.urtw_softc* %0, %struct.urtw_softc** %3, align 8
  store i32 %1, i32* %4, align 4
  %7 = load %struct.urtw_softc*, %struct.urtw_softc** %3, align 8
  %8 = load i32, i32* @URTW_EPROM_CMD, align 4
  %9 = call i32 @urtw_read8_m(%struct.urtw_softc* %7, i32 %8, i32* %5)
  %10 = load i32, i32* %5, align 4
  %11 = load i32, i32* @URTW_EPROM_CMD_MASK, align 4
  %12 = xor i32 %11, -1
  %13 = and i32 %10, %12
  %14 = load i32, i32* %4, align 4
  %15 = load i32, i32* @URTW_EPROM_CMD_SHIFT, align 4
  %16 = shl i32 %14, %15
  %17 = or i32 %13, %16
  store i32 %17, i32* %5, align 4
  %18 = load i32, i32* %5, align 4
  %19 = load i32, i32* @URTW_EPROM_CS, align 4
  %20 = load i32, i32* @URTW_EPROM_CK, align 4
  %21 = or i32 %19, %20
  %22 = xor i32 %21, -1
  %23 = and i32 %18, %22
  store i32 %23, i32* %5, align 4
  %24 = load %struct.urtw_softc*, %struct.urtw_softc** %3, align 8
  %25 = load i32, i32* @URTW_EPROM_CMD, align 4
  %26 = load i32, i32* %5, align 4
  %27 = call i32 @urtw_write8_m(%struct.urtw_softc* %24, i32 %25, i32 %26)
  br label %28

28:                                               ; preds = %2
  %29 = load i32, i32* %6, align 4
  ret i32 %29
}

declare dso_local i32 @urtw_read8_m(%struct.urtw_softc*, i32, i32*) #1

declare dso_local i32 @urtw_write8_m(%struct.urtw_softc*, i32, i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
